# eveneter

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_29_2151-e1fbb94ad805_add_image_for_event.py  2025_04_29_2157-98b670aae5cb_add_image_for_event.py
docker/: docker-compose.yml
docs/: endpoints.md
src/eventer/: enums.py  main.py
src/eventer/api/: __init__.py  api.py
src/eventer/api/category/: schema.py
src/eventer/api/certificate/: controller.py  schema.py  views.py
src/eventer/api/city/: controller.py  schema.py  views.py
src/eventer/api/document/: controller.py  schema.py  views.py
src/eventer/api/event/: controller.py  schema.py  views.py
src/eventer/api/event_day/: controller.py  schema.py  views.py
src/eventer/api/event_members/: controller.py  schema.py  views.py
src/eventer/api/event_teams/: controller.py  schema.py  views.py
src/eventer/api/leaderboard/: controller.py  schema.py  views.py
src/eventer/api/organization/: controller.py  schema.py  views.py
src/eventer/api/parameters/: controller.py  schema.py  views.py
src/eventer/auth/: auth.py
src/eventer/core/: config.py
src/eventer/database/: database.py
src/eventer/models/: __init__.py  category.py  certificate.py  city.py  document.py  event.py  event_day.py  event_member.py  event_team.py  leaderboard.py  organization.py  parameter.py  score_detail.py  stage.py  stage_score.py  stage_team_transition.py  team.py  team_member.py  user.py  user_organization.py
src/eventer/storage/: interface.py  repository.py
(+22 files in other folders)
